--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col"><p>Item 1</p></div>
-  <div class="col"><p>Item 2 Wow this is cool</p></div>
-  <div class="col"><p>Item 3</p></div>
+  <div class="col-lg-1 col-md-1"><p>Item 1</p></div>
+  <div class="col-lg-1 col-md-1"><p>Item 2 Wow this is cool</p></div>
+  <div class="col-lg-1 col-md-1"><p>Item 3</p></div>
 </div>
 
 </body>
