--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>Responsive Layout</title>
+<title>Positioning Elements</title>
+<style>
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  margin-bottom: 15px;
+}
+
+div#container {
+  background-color: #00FFFF;
+}
+p {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  margin-bottom: 15px;
+}
+#p1 {
+  background-color: #A52A2A;
+}
+#p2 {
+  background-color: #DEB887;
+}
+#p3 {
+  background-color: #5F9EA0;
+}
+#p4 {
+  background-color: #FF7F50;
+}
+
+</style>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Positioning Elements</h1>
 
-<div class="row">
-  <div class="col-lg-1 col-md-1"><p>Item 1</p></div>
-  <div class="col-lg-1 col-md-1"><p>Item 2 Wow this is cool</p></div>
-  <div class="col-lg-1 col-md-1"><p>Item 3</p></div>
+<div id="container">
+  <p id="p1"></p>
+  <p id="p2"></p>
+  <p id="p3"></p>
+  <p id="p4"></p>
 </div>
 
 </body>
