--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
 <head>
 <meta charset="utf-8">
 <title>Positioning Elements</title>
+<style>
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  margin-bottom: 15px;
+}
+
+div#container {
+  background-color: #00FFFF;
+}
+p {
+  width: 50%;
+  height: 50%;
+  border: 15px solid black;
+  margin-bottom: 15px;
+}
+#p1 {
+  background-color: #A52A2A;
+}
+#p2 {
+  background-color: #DEB887;
+}
+#p3 {
+  background-color: #5F9EA0;
+}
+
+
+</style>
 
 </head>
 <body>
@@ -13,7 +44,6 @@
   <p id="p1"></p>
   <p id="p2"></p>
   <p id="p3"></p>
-  <p id="p4"></p>
 </div>
 
 </body>
