--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 1</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 2</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p>Item 3</p></div>
+  <div class="box1 col-lg-4 col-md-6 col-sd-12"><p>Item 1</p></div>
+  <div class="box2 col-lg-4 col-md-6 col-sd-12"><p>Item 2</p></div>
+  <div class="box3 col-lg-4 col-md-6 col-sd-12"><p>Item 3</p></div>
 
 </div>
 
