--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sd-12"><p class="box1">Item 1</p></div>
-  <div class="col-lg-4 col-md-6 col-md-6 col-md-12 col-sd-12"><p class="box2">Item 2</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p class="box2">Item 2</p></div>
   <div class="col-lg-4 col-md-6 col-sd-12"><p class="box3">Item 3</p></div>
 
 </div>
