--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p class="box1">Item 1</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p class="box2">Item 2</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p class="box3">Item 3</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="box1">Item 1</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="box2">Item 2</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="box3">Item 3</p></div>
 
 </div>
 
