--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item1">Item 1</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item2">Item 2</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item3">Item 3</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item1">Item 1<br>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</br></p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item2">Item 2<br>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</br></p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item3">Item 3<br>cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc</br></p></div>
 </div>
 
 </body>
