--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Электронная библиотека</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item1">Item 1<br>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</br></p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item2">Item 2<br>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</br></p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item3">Item 3<br>cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc</br></p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item1"><b>Фэнтези</b><pre>жанр современного искусства, разновидность фантастики. Фэнтези основывается на использовании мифологических и сказочных мотивов в современном виде. Жанр сформировался примерно в начале XV века. В середине XX века наиболее значительное влияние на формирование современного облика классического фэнтези оказал английский писатель Джон Рональд Руэл Толкин, автор романа «Властелин колец».</pre></p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item2"><b>Классическая литература</b><pre>Понятие классики в литературе складывалось в три последних столетия античности: оно обозначало определённую категорию писателей, которые по не всегда ясным причинам (в силу древности или авторитета в глазах просвещённых людей) считались достойными служить образцами и наставниками во всём, что касается владения словом и получения знаний. Первым классическим автором, безусловно, считался Гомер. «Одиссея» и «Илиада» уже в классический период развития Греции (V в. до н. э.) считались недостижимой драматической вершиной (понятие «драмы» у древних греков было практически тождественно понятию литературы в целом).</pre></p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item3"><b>Энциклопедии</b><pre>Энциклопедия в том виде, в каком мы её знаем сейчас, появилась в XVIII веке. Образцом для неё послужил словарь. Словарь содержит только слова и их определения, давая читателю минимум информации и нередко не позволяя ему понять значение и применимость термина или как данный термин относится к более широкому кругу знаний. Чтобы устранить эти недостатки, энциклопедия глубже проникает в каждый освещаемый ею предмет и содержит обзор накопленного о нём знания. Энциклопедия часто содержит много географических карт и иллюстраций, а также библиографию и статистику.</pre></p></div>
 </div>
 
 </body>
