--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <h1>Электронная библиотека</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item1"><b>Фэнтези</b><br>жанр современного искусства, разновидность фантастики.</br> 
-  <br>Фэнтези основывается на использовании мифологических и сказочных мотивов</br>
-  <br в современном виде. Жанр сформировался примерно в начале XV века.</br></p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12"><p id="item1"><b>Фэнтези</b><br>жанр современного искусства, разновидность фантастики.</br><br>Фэнтези основывается на использовании мифологических и сказочных мотивов</br><br в современном виде. Жанр сформировался примерно в начале XV века.</br></p></div>
   <div class="col-lg-4 col-md-6 col-sd-12"><p id="item2"><b>Классическая литература</b>Понятие классики в литературе складывалось в три последних столетия античности: оно обозначало определённую категорию писателей, которые по не всегда ясным причинам (в силу древности или авторитета в глазах просвещённых людей) считались достойными служить образцами и наставниками во всём, что касается владения словом и получения знаний. Первым классическим автором, безусловно, считался Гомер. «Одиссея» и «Илиада» уже в классический период развития Греции (V в. до н. э.) считались недостижимой драматической вершиной (понятие «драмы» у древних греков было практически тождественно понятию литературы в целом).</p></div>
 <div class="col-lg-4 col-md-6 col-sd-12"><p id="item3"><b>Энциклопедии</b>Энциклопедия в том виде, в каком мы её знаем сейчас, появилась в XVIII веке. Образцом для неё послужил словарь. Словарь содержит только слова и их определения, давая читателю минимум информации и нередко не позволяя ему понять значение и применимость термина или как данный термин относится к более широкому кругу знаний. Чтобы устранить эти недостатки, энциклопедия глубже проникает в каждый освещаемый ею предмет и содержит обзор накопленного о нём знания. Энциклопедия часто содержит много географических карт и иллюстраций, а также библиографию и статистику.</p></div>
 </div>
