--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Электронная библиотека</h1>
+<h1>Our menu</h1>
 
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-sd-12" id="item1"><p lang="ru"><h2>Фэнтези</h2>Жанр современного искусства, разновидность фантастики.Фэнтези основывается на использовании мифологических и сказочных мотивов в современном виде. Жанр сформировался примерно в начале XV века.</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12" id="item2"><p lang="ru"><h2>Классическая литература</h2>Понятие классики в литературе складывалось в три последних столетия античности: оно обозначало определённую категорию писателей, которые по не всегда ясным причинам считались достойными служить образцами и наставниками во всём, что касается владения словом и получения знаний.</p></div>
-  <div class="col-lg-4 col-md-12 col-sd-12" id="item3"><p lang="ru"><h2>Энциклопедии</h2>Энциклопедия в том виде, в каком мы её знаем сейчас, появилась в XVIII веке. Образцом для неё послужил словарь. Словарь содержит только слова и их определения, давая читателю минимум информации и нередко не позволяя ему понять значение и применимость термина или как данный термин относится к более широкому кругу знаний.</p></div>
+  <div class="col-lg-4 col-md-6 col-sd-12">
+    <section>
+      <div  id="item1">Chicken</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
+  <div class="col-lg-4 col-md-6 col-sd-12">
+    <section>
+      <div id="item2">Beef</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
+  <div class="col-lg-4 col-md-12 col-sd-12">
+    <section>
+      <div  id="item3">sushi</div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.менимость термина или как данный термин относится к более широкому кругу знаний.</p></section></div>
 </div>
 
 </body>
