--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sd-12">
     <section>
-      <div  id="item1">Chicken</div>
+      <div  id="item1"><b>Chicken</b></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
   <div class="col-lg-4 col-md-6 col-sd-12">
     <section>
-      <div id="item2">Beef</div>
+      <div id="item2"><b>Beef</b></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
   <div class="col-lg-4 col-md-12 col-sd-12">
     <section>
-      <div  id="item3">sushi</div>
+      <div  id="item3"><b>Sushi</b></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.менимость термина или как данный термин относится к более широкому кругу знаний.</p></section></div>
 </div>
 
