--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container col-lg-4 col-md-12 col-sd-12">
     <section>
       <div  id="item3"><b>Sushi</b></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.менимость термина или как данный термин относится к более широкому кругу знаний.</p></section></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
 </div>
 
 </body>
