--- a/index.html
+++ b/index.html
@@ -7,18 +7,51 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food,LLC</h1></a>
+          </div>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+  <div id="collapsable-nav" class="collapse navbar-collapse">
+    <ul id="nav-list" class="nav navbar-nav navbar-right">
+      <li class="visible-xs active">
+        <a href="index.html">
+          <span>Chicken</span></a>
+       </li>
+      <li class="visible-xs active">
+        <a href="index.html">
+           <span>Beef</span></a>
+        </li>
+      <li class="visible-xs active">
+        <a href="index.html">
+          <span>Sushi</span> </a>
+          </li>
 <h1>Our menu</h1>
 
 <div class="row">
-  <div class="container col-lg-4 col-md-6 col-sd-12">
+  <div class="container col-lg-12 col-md-12 col-sd-12">
     <section>
       <div  id="item1"><b>Chicken</b></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
-  <div class="container col-lg-4 col-md-6 col-sd-12">
+  <div class="container col-lg-12 col-md-12 col-sd-12">
     <section>
       <div id="item2"><b>Beef</b></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
-  <div class="container col-lg-4 col-md-12 col-sd-12">
+  <div class="container col-lg-12 col-md-12 col-sd-12">
     <section>
       <div  id="item3"><b>Sushi</b></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit.</p></section></div>
